Modify to fix allignment to view in mobile device or ipad.

--- a/app.css
+++ b/app.css
@@ -29,6 +29,10 @@
     padding: 0;
 }
 
-.mypanel {
-    overflow: auto;
+.widthdriver {
+    width: 1100px;
+}
+
+.widthdrivers {
+    width: 800px;
 }
