Adjust screen to fit in mobile and ipad.

--- a/app.css
+++ b/app.css
@@ -28,3 +28,13 @@
     content: "";
     padding: 0;
 }
+
+.mypanel {
+    overflow-y: auto;
+    width: 150px;
+}
+
+.mypanel2 {
+    overflow-y: auto;
+    width: 500px;
+}
